WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286330
ign.com: [macOS] `space` key does not pause video in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=286330
Summary
ign.com: [macOS] `space` key does not pause video in fullscreen
Tim Nguyen (:ntim)
Reported
2025-01-21 16:21:02 PST
rdar://138037616
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2025-01-21 16:34:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39354
EWS
Comment 2
2025-01-21 22:10:25 PST
Committed
289220@main
(4cb86a23da0a): <
https://commits.webkit.org/289220@main
> Reviewed commits have been landed. Closing PR #39354 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug