ign.com: [macOS] `space` key does not pause video in fullscreen https://bugs.webkit.org/show_bug.cgi?id=286330 rdar://138037616

Reviewed by Jean-Yves Avenard.

The “Space key” initially also does not work in Chrome / Firefox, but clicking on the video makes the space key work there. It's not the case in Safari.

In Safari, you need to tab to the video. But in all cases, the video requires focus before the space key works.

To fix the behavior difference in Safari, we make the video mouse focusable to match Firefox / Chrome.

This effectively reverts 94794@main, given the outline it was removing is no longer there (since the introduction of `:focus-visible`). A test is also added
for the outline.

* LayoutTests/media/video-mouse-focus-expected.txt:
* LayoutTests/media/video-mouse-focus.html:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::isMouseFocusable const): Deleted.
* Source/WebCore/html/HTMLMediaElement.h:

Canonical link: https://commits.webkit.org/289220@main